Fixed page-headers vertical alignment

--- a/modules/page-header/page-header.css
+++ b/modules/page-header/page-header.css
@@ -1,6 +1,7 @@
 .page-header {
 	grid-row: 2;
 	padding-bottom: 2px;
+	display: grid;
 }
 
 .heading {
@@ -8,6 +9,7 @@
 	grid-template-columns: repeat(12, minmax(25px, 60px));
 	grid-template-rows: 1fr 1fr;
 	text-align: left;
+	align-self: self-end;
 }
 
 .heading .title1 {
